--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,6 +19,7 @@
   <!-- include spec files here... -->
   <script src="/spec/airportSpec.js"></script>
   <script src="/spec/planeSpec.js"></script>
+  <script src="/spec/weatherSpec.js"></script>
 
 
 </head>
