--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,8 +13,8 @@
 
   <!-- include source files here... -->
   <script src="/src/plane.js"></script>
-
   <script src="/src/airport.js"></script>
+  <script src="/src/weather.js"></script>
 
   <!-- include spec files here... -->
   <script src="/spec/airportSpec.js"></script>
